# seamless_communication

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ACCEPTABLE_USE_POLICY  CONTRIBUTING.md  README.md  SEAMLESS_LICENSE  Seamless_Tutorial.ipynb  build.bat  cog.yaml  dev_requirements.txt  dockerfile  index.html  lang_list.py  predict.py  pyproject.toml  requirements.txt  run.bat  setup.py  styles.css
demo/: app.py  requirements.txt
demo/cascade_expressive_s2st/: index.html  styles.css
demo/dino_pretssel/: README.md  index.html
demo/direct_s2st_units/: index.html  wavesurfer.js
demo/enhanced_direct_s2st_units/: index.html
demo/enhanced_direct_s2st_units/audios/en-es/: metadata.txt  reference.txt
demo/enhanced_direct_s2st_units/audios/es-en/: metadata.txt  reference.txt
demo/expressive/: app.py  requirements.txt  utils.py
demo/m4tv1/: app.py
demo/m4tv2/: app.py  lang_list.py
demo/textless_s2st_real_data/: index.html
docs/expressive/: README.md  seamless_align_expressive_README.md
docs/m4t/: README.md  eval_README.md  on_device_README.md  seamless_align_README.md  unity2_aligner_README.md
docs/streaming/: README.md
finetune_timestamp_extraction/: FineTuneTranscriber.py  __main__.py  fine_tune_transcriber.py  generate_deltas_histograms.py
ggml/: CMakeLists.txt  Makefile  README.md  ctypes_utils.py  ggml.py  ggml_convert.py  mt.py  requirements.txt  test_ggml_integration.py  test_unity_cpp.py  third_party_ggml.py
ggml/examples/: CMakeLists.txt  common.cpp  common.h
ggml/examples/kaldi-native-fbank/csrc/: test-log.cc  test-online-fbank.cc  test-online-feature.cc  test-rfft.cc
ggml/examples/kaldi-native-fbank/python/: CMakeLists.txt
ggml/examples/kaldi-native-fbank/python/csrc/: CMakeLists.txt  feature-fbank.cc  feature-fbank.h  feature-window.cc  feature-window.h  kaldi-native-fbank.cc  kaldi-native-fbank.h  mel-computations.cc  mel-computations.h  online-feature.cc  online-feature.h  utils.cc  utils.h
ggml/examples/unity/: CMakeLists.txt  buffered_ggml_writer.py  convert-pt-to-ggml.py  convert_pt_states.py  fairseq2.cpp  fairseq2.h  fairseq2_to_ggml_converter.py  ggml_convert.py  model_loader.cpp  model_loader.h  type_utils.py  unity.cpp  unity_model_loader.cpp  unity_model_loader.h
ggml/examples/unity/lib/: unity_lib.cpp  unity_lib.h
ggml/include/ggml/: ggml-alloc.h  ggml-backend.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend.c  ggml-quants.c  ggml.c
scripts/: convert_mel_hifigan_chkpt.py  convert_pretssel_hifigan_chkpt.py  install_devfair.sh  test_hindi_models.py
scripts/eval_utils/: compute_metrics.py  lang_mapping.py
scripts/m4t/audio_to_units/: README.md  audio_to_units.py
scripts/m4t/evaluate/: README.md  asr_bleu.py  download_data.py  evaluate.py
scripts/m4t/finetune/: README.md  dataloader.py  dataset.py  dist_utils.py  finetune.py  trainer.py
scripts/m4t/predict/: README.md  predict.py
scripts/m4t/train/: configs.py  dataloader.py  install_fairaws.sh  model.py  run_training.py  run_with_slurm.py  trainer.py
scripts/m4t/train/recipes/: asr_small.yaml  asr_small_wh_transc.yaml  large_M4T_v1.yaml  m4t_v1_train_manifests.txt
scripts/watermarking/: compile_chkpt.py  seamlesswatermark.yaml  watermarking.py
src/seamless_communication/: __init__.py  store.py
src/seamless_communication.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/seamless_communication/assets/: __init__.py  download_manager.py  store.py
src/seamless_communication/assets/cards/: m4t_v2_s2t.yaml  m4t_v2_x2t.yaml  multitask_unity_large.yaml  multitask_unity_medium.yaml  s2t_chunk_conformer.yaml  s2t_m4t_v2.yaml  seamlessM4T_large.yaml  seamlessM4T_medium.yaml  seamlessM4T_v2_large.yaml  unity_nar_bilingual.yaml  unity_nar_multilingual.yaml  unity_nllb-100.yaml  unity_nllb-200.yaml  vocoder_36langs.yaml  vocoder_commercial.yaml  x2t_m4t_v2.yaml  xlsr2_1b_v2.yaml
src/seamless_communication/cards/: conformer_shaw.yaml  expresso.yaml  mexpresso_text.yaml  mintox.yaml  monotonic_decoder.yaml  mutox.yaml  nano.yaml  nar_t2u_aligner.yaml  pretssel_v1.yaml  seamlessM4T_large.yaml  seamlessM4T_medium.yaml  seamlessM4T_v2_large.yaml  seamless_expressivity.yaml  seamless_expressivity_trainable.yaml  seamless_streaming_monotonic_decoder.yaml  seamless_streaming_unity.yaml  unity_micro.yaml  unity_micro_tokenizer.yaml  unity_nano.yaml  unity_nllb-100.yaml  unity_nllb-200.yaml  unity_sans_decoder.yaml  vocoder_36langs.yaml  vocoder_mel.yaml  vocoder_mel_24khz.yaml  vocoder_pretssel.yaml  vocoder_pretssel_16khz.yaml  vocoder_v2.yaml  xlsr2_1b_v2.yaml
src/seamless_communication/cli/eval_utils/: __init__.py  (+2 more)
src/seamless_communication/datasets/: datatypes.py  huggingface.py
src/seamless_communication/denoise/: demucs.py
src/seamless_communication/inference/: README.md  __init__.py  expressive_translator.py  generator.py  ngram_repeat_block_processor.py  pretssel_generator.py  transcriber.py  translator.py
src/seamless_communication/models/: tokenizer.py
src/seamless_communication/segment/: silero_vad.py
src/seamless_communication/toxicity/: __init__.py  bad_word_checker.py  etox_bad_word_checker.py  mintox.py
tests/: __init__.py  common.py  conftest.py
tests/integration/inference/: test_mintox.py  test_translator.py
tests/integration/models/: test_conformer_shaw.py  test_expressivity.py  test_pretssel_vocoder.py  test_translator.py  test_unit_extraction.py  test_unit_extractor.py  test_unity2_aligner.py  test_watermarked_vocoder.py
tests/unit/: __init__.py
tests/unit/denoise/: test_demucs.py
tests/unit/segment/: test_silero_vad.py
(+201 files in other folders)
